finally fixed the spacing issue with input numbers, added remaining CSS requirements

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   height: 100vh;
   margin: 0;
   padding: 0;
+  font-size: 20px;
 }
 
 .inputCalculation {
@@ -13,23 +14,46 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 #input {
   margin-left: 10px;
   margin-right: 10px;
   padding: 5px;
-  min-width: 10px;
+  min-width: 60px;
   width: auto;
-  border-radius: 4px;
+  border-radius: 6px;
+  font-size: 40px;
+  border: 5px solid rgb(189, 189, 189);
+  text-align: center;
+  font-family: Helvetica;
 }
 
 button {
   margin-left: 10px;
   margin-right: 10px;
-  padding: 10px;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  width: 60px;
+  font-size: 40px;
+  background-color: rgb(189, 189, 189);
+  border: 4px solid rgb(189, 189, 189);
+  border-radius: 6px;
+  color: white;
+  font-family: Helvetica;
+  transition: background-color 0.5s, color 0.5s;
 }
 
 #finalCount {
   font-weight: bold;
+  font-size: 50px;
+  font-family: Helvetica;
+}
+
+button:hover {
+  background-color: white;
+  color: rgb(189, 189, 189);
 }
